--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "start": "cross-env NODE_ENV=development gulp",
     "build": "cross-env NODE_ENV=production gulp build"
   },
-  "dependencies": {
-    "swiper": "^8.4.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
